# pack-protocol

./: CHECKLIST.md  Cargo.toml  README.md  SECURITY_AUDIT.txt
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: pack_protocol.hpp
bindings/cpp/tests/: test_c_roundtrip.c  test_cpp_roundtrip.cpp
bindings/kotlin/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/src/main/kotlin/org/pack/protocol/: Fingerprint.kt  GroupCipher.kt  IdentityKeyPair.kt  PackGroupSession.kt  PackSealedSender.kt  PackSession.kt
bindings/kotlin/src/test/kotlin/org/pack/protocol/: RoundTripTest.kt  SmokeTest.kt
bindings/swift/: Package.swift
bindings/swift/CPackProtocolFFI/include/: module.modulemap
bindings/swift/Sources/PackProtocol/: Fingerprint.swift  IdentityKeyPair.swift  PackGroupSession.swift  PackSealedSender.swift  PackSession.swift
bindings/swift/Tests/PackProtocolTests/: RoundTripTests.swift
crates/pack-protocol/: Cargo.toml  build.rs
crates/pack-protocol-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/pack-protocol-ffi/include/: pack_protocol.h
crates/pack-protocol-ffi/src/: api_ffi.rs  error.rs  fingerprint_ffi.rs  group_ffi.rs  handles.rs  identity_ffi.rs  lib.rs  pq_ffi.rs  sealed_sender_ffi.rs  session_ffi.rs
crates/pack-protocol-jni/: Cargo.toml
crates/pack-protocol-jni/src/: api_jni.rs  convert.rs  lib.rs
crates/pack-protocol-swift/: Cargo.toml  build.rs
crates/pack-protocol-swift/src/: lib.rs
crates/pack-protocol/proto/: content.proto  pack.proto
crates/pack-protocol/src/: api.rs  chain.rs  errors.rs  fingerprint.rs  group.rs  identity.rs  keys.rs  lib.rs  message.rs  pqxdh.rs  ratchet.rs  sealed_sender.rs  sesame.rs  session.rs  store.rs  testing.rs  x3dh.rs
crates/pack-protocol/src/crypto/: aead.rs  curve.rs  hmac.rs  kdf.rs  kem.rs  mod.rs
crates/pack-protocol/src/proto/: wire.rs
crates/pack-protocol/tests/: cross_language_interop.rs  security_properties.rs
data/: manufacturer_library.json
docs/: pack-protocol-implementation-plan.md  security-audit-prep.md
formal/: COMPUTATIONAL_REDUCTION.md  SECURITY_MODEL.md  check_alignment.py  pack_protocol.spthy  pack_protocol_lemmas.spthy  run_all.sh  verify.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_message_deserialize.rs  fuzz_pqxdh.rs  fuzz_ratchet_decrypt.rs  fuzz_sealed_sender_decrypt.rs  fuzz_sender_key_message.rs
xtask/src/: main.rs
