[workspace]
resolver = "2"
members = [
    "crates/pack-protocol",
    "crates/pack-protocol-ffi",
    "crates/pack-protocol-jni",
    "crates/pack-protocol-swift",
    "xtask",
]

[workspace.dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core", "hazmat"] }
curve25519-dalek = { version = "4", features = ["group"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }
prost = "0.13"
thiserror = "2"
subtle = "2"
async-trait = "0.1"
ml-kem = { version = "0.3", features = ["zeroize", "getrandom"] }
