[package]
name = "pack-protocol-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
pack-protocol = { path = "../pack-protocol" }
swift-bridge = { git = "https://github.com/finn-devs/swift-bridge.git", branch = "main" }

[build-dependencies]
swift-bridge-build = { git = "https://github.com/finn-devs/swift-bridge.git", branch = "main" }
